--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 ::-webkit-scrollbar{
-    width: 0px;
+    width: 1px;
 }
 
 * {
@@ -67,17 +67,70 @@ a {
     width: 100vw;
     height: 100vh;
     top: 0;
-    z-index: -1;
+    z-index: 2;
     filter: saturate(2);
 }
 
 .animation:after {
     content: "";
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%);
+    top: 0;
+    left: 0;
+    opacity: 0.1;
+    /* animation: animateGrain 8s steps(10) infinite;  */
+}
 
+@keyframes animateGrain {
+    0%, 100% {
+        transform: translate(0, 0);
+    }
+    10% {
+        transform: translate(-5%, -10%);
+    }
+    20% {
+        transform: translate(-15%, 5%);
+    }
+    30% {
+        transform: translate(7%, -25%);
+    }
+    40% {
+        transform: translate(-5%, 25%);
+    }
+    50% {
+        transform: translate(-15%, 10%);
+    }
+    60% {
+        transform: translate(15%, 0%);
+    }
+    70% {
+        transform: translate(0%, 15%);
+    }
+    80% {
+        transform: translate(3%, 10%);
+    }
+    90% {
+        transform: translate(-10%, 10%);
+    }
+}
+
+.website-content {
+    width: 100%;
+    height: 100vh;
+    background: #ffffff;
+    position: relative;
+    padding: 2em;
+    z-index: 1;
+}
+
+.end-lottie {
+    position: absolute;
+    top: 100vh;
+    width: 100%;
+    height: 1px;
+    z-index: 1;
 }
 
 .content {
